@@ -2,15 +2,17 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.09 [20140521] [svn: r241]
+ChangeLog for sdparm-1.09 [20140522] [svn: r242]
   - decode Third Party Copy VPD page
+  - Supported block lengths and protection types (sbc4r01) +
+    Block device characterics extension VPD pages added
   - fix manufacturer-assigned serial number VPD page length
   - device id VPD: T10 vendor identification designator clean up
   - block device characteristics VPD: add HAW_ZBC (sbc4r01)
   - SAS/SPL disconnect-reconnect mpage: expand
   - standard inquiry response (sinq): add LU_CONG
   - change ibm vendor code to lto5 and lto6
-  - point svn:externals to rev 580 of sg3_utils
+  - point svn:externals to rev 583 of sg3_utils
   - upgrade automake to version 1.14.1
   - configure: add --disable-libsgutils so build bypasses that
     library if present
